# data-science-emails

./: LICENSE  Makefile  README.md  setup.cfg  setup.py
gh-pages/: .gitrepo  README.md  README.rst
gh-wiki/: .gitrepo  Home.md
notebooks/: Makefile  Pipfile
