# Type of python distribution
[bdist_wheel]
universal=0

[metadata]
name = ocean_email
author = Vikash Kothary
author_email = kothary.vikash@gmail.com
summary = Publishing to Pypi with PBR and Travis.
license = GPLv3
description-file =
    README.rst
home-page = https://vikash-kothary.github.io/ocean-emails
python_requires = >=3.6

# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP
    Environment :: Console

[options]
packages = find:

#[files]
#data_files =
#    some/example = some/example/*

#[entry_points]
#console_scripts =
#    automabot = your_package.__main__:main